Final Spots project with corrections

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,6 @@
 .page {
+  display: flex;
+  flex-direction: column;
   background-color: #fcf5e5;
   min-height: 100vh;
 }
@@ -6,4 +8,8 @@
 .page__section {
   max-width: 1280px;
   margin: 0 auto;
+}
+
+.page__content {
+  flex-grow: 1;
 }
